Revert "Parallelize simulation row generation in SEM, enable positive-data-only support, add FCIT tests, and introduce `Fcit2` implementation."
This reverts commit 8c1c1357